<resources>
    <string name="app_name">Parwinder_Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="divide_symbol">/</string>
    <string name="minus_symbol">-</string>
    <string name="multiply_symbol">*</string>
    <string name="add_symbol">+</string>
    <string name="clear">C</string>
    <string name="equals">=</string>
    <string name="_8_digit_calculator">8 digit calculator</string>
    <string name="percentage">mod</string>
    <string name="square">x&#xB2;</string>
    <string name="square_root_symbol">2\u221ax</string>
    <string name="inverse">1/x</string>
    <string name="invalid_input">Invalid Input!</string>
</resources>